<resources>
    <string name="app_name">DCNutriLabels</string>
    <string name="click">Click!</string>
    <string name="pulls_image_from_either_gallery_or_camera">pulls image from either Gallery Or Camera</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_picture_analysis">pictureAnalysis</string>
    <string name="read_text_here">Read Text Here</string>
    <string name="rotate">Rotate</string>
    <string name="take_the_pic_please">Take The Pic Please</string>
    <string name="yeet">yeet</string>
    <string name="title_activity_user__details">User_Details</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="school_organization">School/Organization</string>
    <string name="email">Email</string>
    <string name="manually_search_ingredient">Manually Search Ingredient</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
